--- a/tutorials/OneLinePlotBarChart.Rmd
+++ b/tutorials/OneLinePlotBarChart.Rmd
@@ -10,9 +10,6 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Introduction
-
-One of the feature of [**gg1L**](http://github.com/walterxie/gg1L) package is to simplify [ggplot2](http://docs.ggplot2.org/current/) codes into one-line functions, and also to provide some other useful utility functions.
 
 ```{r library, warning=FALSE}
 library(gg1L)
@@ -21,9 +18,10 @@ library(gg1L)
 
 ## Bar chart
 
-Load the example data *model.test*, select "Mac" only in *OS* column, and display the first 3 rows:
+Load the example data *model.test* from [ComMA](https://github.com/walterxie/ComMA) package (We only use the example data, *gg1L* doesn't depend it), select "Mac" only in *OS* column, and display the first 3 rows:
 
-```{r model.test}
+```{r model.test, warning=FALSE}
+library(ComMA)
 data(model.test)
 model.test.mac <- model.test[model.test$OS=="Mac",]
 model.test.mac[1:3,]
@@ -133,6 +131,7 @@ ab$gg.plot
 #pdf.ggplot(ab$gg.plot, fig.path="abundance-bar.pdf", width=ab$pdf.width, height=ab$pdf.height)
 ```
 
+<!--- mv to CMUtils.R because ggYAcrossXBar depends on ComMA::cmYAcrossX
 ### Y across X bar chart
 
 This bar chart introduced in the supplymentary data of <https://doi.org/10.1186/s13742-015-0086-1> shows both of the total value of *y* (the number of reads) and the frequency of *y* (the number of phyla) appeared and only appeared in the given number of columns (datasets) listed in x-axis.  
@@ -141,7 +140,7 @@ This bar chart introduced in the supplymentary data of <https://doi.org/10.1186/
 ggYAcrossXBar(reads.phyla[,1:6], terms=c("phyla", "datasets", "reads"), title="", 
               x.lab="Number of markers crossed", y.lab="Number of phyla/reads", verbose=F)
 ```
-
+--->
 
 
 
