--- a/tutorials/OneLinePlotPointsLines.Rmd
+++ b/tutorials/OneLinePlotPointsLines.Rmd
@@ -10,9 +10,6 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Introduction
-
-One of the feature of [**gg1L**](http://github.com/walterxie/gg1L) package is to simplify [ggplot2](http://docs.ggplot2.org/current/) codes into one-line functions, and also to provide some other useful utility functions.
 
 ```{r library, warning=FALSE}
 library(gg1L)
@@ -23,8 +20,9 @@ library(gg1L)
 
 Create random coordinates for 2 clusters:
 
-```{r random2Clusters}
-df.clusters <- random2Clusters()
+```{r random2Clusters, warning=FALSE}
+library(ComMA)
+df.clusters <- ComMA::random2Clusters()
 df.clusters$labels <- rownames(df.clusters)
 df.clusters[1:3,]
 ```
@@ -83,8 +81,9 @@ ggScatterPlot(df.clusters, x.id="x", y.id="y", colour.id="group", text.id="label
 
 Load the example data *reads.phyla*, where *x* is one of genetic marks, and the numbers are eDNA sequences (reads) identified as the phylum listed in *y*:
 
-```{r reads.phyla}
-
+```{r reads.phyla, warning=FALSE}
+data(reads.phyla)
+#reads.phyla[1:2,]
 ```
 
 Because the functions to compute NMDS *metaMDS*, PCoA *cmdscale*, and PCA *prcomp* take different input data, please make sure you give a valid input for different NMDS plots.
@@ -103,7 +102,7 @@ It is also known as principal coordinates analysis (Gower, 1966).
 
 ## Line with points
 
-The basic tutorial of line with points is avaible in another tutorial [**Plot traces**](https://cdn.rawgit.com/walterxie/ComMA/master/tutorials/OneCommandLinePlotPointsLines.html) subsection.
+The basic tutorial of line with points is avaible in another tutorial [**Plot traces**](https://cdn.rawgit.com/walterxie/gg1L/master/tutorials/OneLinePlotPointsLines.html) subsection.
 
 ### Rarefaction curves for multi-sample
 
