--- a/tutorials/OneLinePlot.Rmd
+++ b/tutorials/OneLinePlot.Rmd
@@ -29,7 +29,8 @@ model.test[1:3,]
 Plot all performance scores for four GTR models, where each box is the statistical summary of the test:
 
 ```{r BoxWhiskersPlot1, warning=FALSE}
-ggBoxWhiskersPlot(model.test, x.id="test", y.id="performance", colour.id="OS", x.text.angle=90, verbose = F)
+bw1 <- ggBoxWhiskersPlot(model.test, x.id="test", y.id="performance", colour.id="OS", x.text.angle=90, verbose = F)
+bw1
 ```
 
 ### Adjust view
@@ -37,8 +38,8 @@ ggBoxWhiskersPlot(model.test, x.id="test", y.id="performance", colour.id="OS", x
 Zoom in the plot in y-axis without change the underlying data using <code>y.lim.cart=c(NA,5)</code>, where the lower bound is not changed by given "NA".
 
 ```{r BoxWhiskersPlot2, warning=FALSE}
-ggBoxWhiskersPlot(model.test, x.id="test", y.id="performance", colour.id="OS", 
-                  x.text.angle=90, y.lim.cart=c(NA,5), verbose = F)
+bw2 <- ggBoxWhiskersPlot(model.test, x.id="test", y.id="performance", colour.id="OS", x.text.angle=90, y.lim.cart=c(NA,5), verbose = F)
+bw2
 ```
 <!--- + expend_limits
 Use both <code>bar.pos="fill"</code> and <code>y.trans="per"</code> to create a typical percentage bar chart:
@@ -54,8 +55,7 @@ ggBoxWhiskersPlot(model.test, x.id="test", y.id="performance", colour.id="OS",
 This plots a 1d distribution by dividing "performance" into bins and counting the number of observations in each bin.
 
 ```{r Histogram, warning=FALSE}
-ggHistogram(model.test[model.test$performance<3,], x.id="performance", fill.id="model", 
-            binwidth=0.1, x.text.angle=90, verbose=F)
+ggHistogram(model.test[model.test$performance<3,], x.id="performance", fill.id="model", binwidth=0.1, x.text.angle=90, verbose=F)
 ```
 
 
@@ -78,7 +78,8 @@ hm.df[1:3,]
 Draw a simply heatmap of read frequency in each phylumn, where <code>melt.id="phylum"</code> defines the y-axis label in the heatmap: 
 
 ```{r Heatmap1, warning=FALSE}
-ggHeatmap(hm.df, melt.id="phylum", verbose = F)
+hm1 <- ggHeatmap(hm.df, melt.id="phylum", verbose = F)
+hm1
 ```
 
 Set <code>log.scale.colour=T</code> to active logscale colour. 
@@ -87,23 +88,44 @@ Add a line to split the top 5 fom others:
 **Note:** the deafult <code>y.levels=c()</code> makes y labels sorted by alphabetical order, but if <code>y.levels=NA</code>, there is no sorting applied.
 
 ```{r Heatmap2, warning=FALSE}
-hm <- ggHeatmap(hm.df, melt.id="phylum", y.levels=NA, log.scale.colour=T, verbose = F)
-hm + ggAddLine(linetype=2, yintercept=5.5, colour="red")
+hm2 <- ggHeatmap(hm.df, melt.id="phylum", y.levels=NA, log.scale.colour=T, verbose = F) +
+  ggAddLine(linetype=2, yintercept=5.5, colour="red")
+hm2
 ```
 
 The heatmap start to draw the rows from bottom to top as default, you can set <code>y.levels=rev(rownames(hm.df))</code> to reverse the order of y labels, and set <code>add.label=F</code> to remove the numbers:
 
 ```{r Heatmap3, warning=FALSE}
 y.rev=rev(rownames(hm.df))
-ggHeatmap(hm.df, melt.id="phylum", y.levels=y.rev, log.scale.colour=T, add.label=F, verbose = F)
+hm3<- ggHeatmap(hm.df, melt.id="phylum", y.levels=y.rev, log.scale.colour=T, add.label=F, verbose = F)
+hm3
 ```
 
 
 ## Utils
 
+<code>grid_arrange_shared_legend</code> shares a legend between multiple plots, and returns a *gtable* object:
 
+```{r grid1, warning=FALSE, message=FALSE}
+grid_arrange_shared_legend(bw1, bw2, ncol=2, nrow=1)
+```
 
+<code>widths</code> is a unit vector giving the width of each column in the grid (length(widths) == ncol):
 
+```{r grid2, warning=FALSE, message=FALSE}
+grid_arrange_shared_legend(list(hm1, hm2, hm3), input.list=T, ncol=3, nrow=1, widths=c(1, 0.1, 0.1))
+```
 
+## Some tips
 
+If a function returns a *ggplot* object, then its name starts with "gg". 
+It needs to use <code>pdf.ggplot</code>* to create pdf. 
+It also can be concatenated using '+'.  
+ 
+If a function returns a *gtable* object, then its name starts with "gt".
+It needs to use <code>pdf.gtplot</code> to create pdf, or <code>plot.gtable</code> to plot to console.
+
+All basic charts are designed to return a *ggplot* 
+object for easy to extend, you may need to turn off clipping using  
+<code>unclip.ggplot</code> if there are overlaps between points/labels and axes.
 
