--- a/tutorials/OneLinePlotTracerR.Rmd
+++ b/tutorials/OneLinePlotTracerR.Rmd
@@ -125,13 +125,14 @@ ggScatterPlot(mcmc.log[, c("YuleModel.t.Species", "TreeHeight.Species")], x.id="
 
 ## Multiple parameters and logs
 
-The 95% confidence interval of 3 parameters having the "TreeHeight" keyword (100 samples):
+The 95% confidence interval of 3 parameters having the "TreeHeight" keyword:
 
 ```{r errorbar1, warning=FALSE, message=FALSE}
 summ <- summarySE(df.TreeHeight, measurevar="value", groupvars=c("parameters"))
-
-ggLineWithPoints(summ, x.id="parameters", y.id="value", line.or.point=3, x.scale="discrete", verbose=F) + 
-  ggAddErrorBars(lower="value-se", upper="value+se", verbose=F)
+colnames(summ)[which(names(summ) == "value")] <- "mean"
+summ
+ggLineWithPoints(summ, x.id="parameters", y.id="mean", line.or.point=3, x.scale="discrete", verbose=F) + 
+  ggAddErrorBars(lower="mean-ci", upper="mean+ci", verbose=F)
 ```
 <!--- different to Tracer !? --->
 
